# bz-airgap

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  fetch.sh  hello.go  resolve.bzl  resolve.go  resolved.bzl  resolved.lst
go.mod.cache/cache/download/go.starlark.net/@v/: list  v0.0.0-20230224151120-c52844e64a10.info  v0.0.0-20230224151120-c52844e64a10.ziphash
go/pkg/mod/: .gitignore
resolved/distdir/: .gitignore
