load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "hello",
    srcs = ["hello.go"],
    deps = [
        "@go.starlark.net//starlark",
    ],
)

go_binary(
    name = "resolve",
    srcs = ["resolve.go"],
    data = [
        "resolve.bzl",
        "resolved.bzl",
    ],
    deps = [
        "@go.starlark.net//starlark",
    ],
)

sh_binary(
    name = "fetch",
    srcs = ["fetch.sh"],
)

alias(
    name = "go",
    actual = "@go_sdk//:bin/go",
)
